{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 1047,
  "lineage": "70c46b2a-6491-bb33-9bf2-4ba094af0a44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "arn_suffix": "app/docker-Sudeep-my-alb/df6b53e70802c796",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "docker-Sudeep-my-alb-179272121.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "docker-Sudeep-my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0df6d48b25dd1557f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015684dcd1b02730e"
              },
              {
                "subnet_id": "subnet-0452962fcc1ba0464"
              }
            ],
            "subnets": [
              "subnet-015684dcd1b02730e",
              "subnet-0452962fcc1ba0464"
            ],
            "vpc_id": "vpc-0dc0bf117da32135b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/da826649046686c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/da826649046686c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.tg_blue",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_8081",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/154683390e8d8974",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/154683390e8d8974",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "mutual_authentication": [],
            "port": 8081,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.tg_blue",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_8082",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/6a83b9454002bc19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/6a83b9454002bc19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "mutual_authentication": [],
            "port": 8082,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.tg_lime",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_8083",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/9af035d96f43d0a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/9af035d96f43d0a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:loadbalancer/app/docker-Sudeep-my-alb/df6b53e70802c796",
            "mutual_authentication": [],
            "port": 8083,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.tg_pink",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "blue_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener-rule/app/docker-Sudeep-my-alb/df6b53e70802c796/da826649046686c4/96606c95d75e9714",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/blue*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener-rule/app/docker-Sudeep-my-alb/df6b53e70802c796/da826649046686c4/96606c95d75e9714",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:listener/app/docker-Sudeep-my-alb/df6b53e70802c796/da826649046686c4",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_listener.app_listener_80",
            "aws_lb_target_group.tg_blue",
            "aws_security_group.alb_sg",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
            "arn_suffix": "targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "docker-Sudeep-tg-blue",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc0bf117da32135b"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_lime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
            "arn_suffix": "targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "docker-Sudeep-tg-lime",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc0bf117da32135b"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_pink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
            "arn_suffix": "targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "docker-Sudeep-tg-pink",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc0bf117da32135b"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instance_to_tg_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367-20240203192529772900000001",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
            "target_id": "i-0ad10ba7da82b6e2d"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_blue",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367-20240203192529939200000005",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-blue/8d4ee910ca923367",
            "target_id": "i-0cc47f7b6078c80dc"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_blue",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instance_to_tg_lime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b-20240203192529834500000003",
            "port": 8082,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
            "target_id": "i-0ad10ba7da82b6e2d"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_lime",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b-20240203192529939600000006",
            "port": 8082,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-lime/fadf8abd59e92c2b",
            "target_id": "i-0cc47f7b6078c80dc"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_lime",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_instance_to_tg_pink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8-20240203192529852900000004",
            "port": 8083,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
            "target_id": "i-0ad10ba7da82b6e2d"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_pink",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8-20240203192529801800000002",
            "port": 8083,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494992235231:targetgroup/docker-Sudeep-tg-pink/e370b4b5577e8cf8",
            "target_id": "i-0cc47f7b6078c80dc"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_lb_target_group.tg_pink",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.aws_instance.computeInstance",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494992235231:security-group/sg-0df6d48b25dd1557f",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df6d48b25dd1557f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-Sudeep-alb-sg",
            "name_prefix": "",
            "owner_id": "494992235231",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc0bf117da32135b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494992235231:security-group/sg-0cc00523c4017499c",
            "description": "Allow all inbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc00523c4017499c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-Sudeep-compute-Security-Group",
            "name_prefix": "",
            "owner_id": "494992235231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-Sudeep-Compute-Security-Group"
            },
            "tags_all": {
              "Name": "docker-Sudeep-Compute-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc0bf117da32135b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "computeInstance",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:494992235231:instance/i-0ad10ba7da82b6e2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0ad10ba7da82b6e2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "docker-Sudeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bacc42dce0dcda62",
            "private_dns": "ip-10-10-0-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.42",
            "public_ip": "3.89.156.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d0c8acc77cbe980",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cc00523c4017499c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015684dcd1b02730e",
            "tags": {
              "Name": "docker-Sudeep-web-app"
            },
            "tags_all": {
              "Name": "docker-Sudeep-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc00523c4017499c"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:494992235231:instance/i-0cc47f7b6078c80dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0cc47f7b6078c80dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "docker-Sudeep",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001fa96bf398a0a2a",
            "private_dns": "ip-10-10-1-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.87",
            "public_ip": "3.237.173.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c70b629cbdef138",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cc00523c4017499c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0452962fcc1ba0464",
            "tags": {
              "Name": "docker-Sudeep-web-app"
            },
            "tags_all": {
              "Name": "docker-Sudeep-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc00523c4017499c"
            ]
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.ec2SG",
            "data.terraform_remote_state.network",
            "module.web_app.data.aws_ami.latest_amazon_linux"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}